Move bibliography in here

--- a/2016/06-08-PASC-firedrake.tex
+++ b/2016/06-08-PASC-firedrake.tex
@@ -71,7 +71,7 @@ London
 
 \setbeamertemplate{bibliography item}{}
 \renewcommand{\bibfont}{\scriptsize}
-\addbibresource{references.bib}
+\addbibresource{../literature.bib}
 
 \setlength{\bibitemsep}{1ex}
 
