--- a/2016/07-13-GungHo-thetis.tex
+++ b/2016/07-13-GungHo-thetis.tex
@@ -68,7 +68,7 @@ Imperial College London
 
 \setbeamertemplate{bibliography item}{}
 \renewcommand{\bibfont}{\footnotesize}
-\addbibresource{references.bib}
+\addbibresource{../literature.bib}
 
 \setlength{\bibitemsep}{1ex}
 
