--- a/2017/02-14-IC-solvers.tex
+++ b/2017/02-14-IC-solvers.tex
@@ -38,7 +38,7 @@ London
 
 \setbeamertemplate{bibliography item}{}
 \renewcommand{\bibfont}{\footnotesize}
-\addbibresource{references.bib}
+\addbibresource{../literature.bib}
 
 \newcommand{\inner}[1]{\left\langle #1 \right \rangle}
 \setlength{\bibitemsep}{1ex}
