--- a/2017/03-20-recover-exeter.tex
+++ b/2017/03-20-recover-exeter.tex
@@ -44,7 +44,7 @@ backend=biber]{biblatex}
 \clearfield{number}%
 }
 
-\addbibresource{references.bib}
+\addbibresource{../literature.bib}
 
 \title{From here to there}
 \subtitle{challenges for \cancel{peta} exa-scale transient simulation}
