--- a/2017/07-06-Durham-computing.tex
+++ b/2017/07-06-Durham-computing.tex
@@ -58,7 +58,7 @@ London
 \setbeamertemplate{bibliography item}{}
 
 \renewcommand{\bibfont}{\fontsize{7}{7}\selectfont}
-\addbibresource{references.bib}
+\addbibresource{../literature.bib}
 
 \setlength{\bibitemsep}{1ex}
 \setlength{\fboxsep}{1pt}
