--- a/2018/03-12-Dagstuhl-tensor-optimisation.tex
+++ b/2018/03-12-Dagstuhl-tensor-optimisation.tex
@@ -45,7 +45,7 @@
 
 \setbeamertemplate{bibliography item}{}
 \renewcommand{\bibfont}{\fontsize{8}{8}\selectfont}
-\addbibresource{references.bib}
+\addbibresource{../literature.bib}
 \setlength{\bibitemsep}{1ex}
 \setlength{\fboxsep}{1pt}
 
