--- a/2018/06-06-PETSc-solvers.tex
+++ b/2018/06-06-PETSc-solvers.tex
@@ -55,7 +55,7 @@ London
 
 \setbeamertemplate{bibliography item}{}
 \renewcommand{\bibfont}{\fontsize{7}{7}\selectfont}
-\addbibresource{references.bib}
+\addbibresource{../literature.bib}
 \newcommand{\arxivlink}[2]{%
   \href{http://www.arxiv.org/abs/#1}%
   {{\small\texttt{arXiv:\,#1\,[#2]}}}%
