--- a/2018/12-18-UPMC-short.tex
+++ b/2018/12-18-UPMC-short.tex
@@ -136,7 +136,7 @@ backend=biber]{biblatex}
 \titlegraphic{\hfill\includegraphics[height=0.8cm]{durham-logo}}
 
 \renewcommand{\bibfont}{\fontsize{7}{7}\selectfont}
-\addbibresource{references.bib}
+\addbibresource{../literature.bib}
 
 \setlength{\bibitemsep}{1ex}
 \setlength{\fboxsep}{1pt}
