--- a/2019/03-07-oxford-computational-maths.tex
+++ b/2019/03-07-oxford-computational-maths.tex
@@ -29,7 +29,7 @@ giveninits=true,
 uniquename=init,
 backend=biber]{biblatex}
 \renewcommand{\bibfont}{\fontsize{7}{7}\selectfont}
-\addbibresource{references.bib}
+\addbibresource{../literature.bib}
 
 \setlength{\bibitemsep}{1ex}
 \setlength{\fboxsep}{1pt}
