--- a/2024/09-16-firedrake.tex
+++ b/2024/09-16-firedrake.tex
@@ -20,7 +20,7 @@ giveninits=true,
 uniquename=init,
 backend=biber]{biblatex}
 \renewcommand{\bibfont}{\fontsize{7}{7}\selectfont}
-\addbibresource{09-firedrake.bib}
+\addbibresource{../literature.bib}
 
 \begin{document}
 
