--- a/2016/05-18-FEniCS-nwp-multigrid.tex
+++ b/2016/05-18-FEniCS-nwp-multigrid.tex
@@ -66,7 +66,7 @@
 
 \setbeamertemplate{bibliography item}{}
 \renewcommand{\bibfont}{\footnotesize}
-\addbibresource{references.bib}
+\addbibresource{../literature.bib}
 
 \setlength{\bibitemsep}{1ex}
 
