--- a/2016/07-06-PDESoft-firedrake.tex
+++ b/2016/07-06-PDESoft-firedrake.tex
@@ -71,7 +71,7 @@ London
 
 \setbeamertemplate{bibliography item}{}
 \renewcommand{\bibfont}{\footnotesize}
-\addbibresource{references.bib}
+\addbibresource{../literature.bib}
 
 \setlength{\bibitemsep}{1ex}
 
