--- a/2017/03-03-CSE-nwp-multigrid.tex
+++ b/2017/03-03-CSE-nwp-multigrid.tex
@@ -103,7 +103,7 @@
 
 \setbeamertemplate{bibliography item}{}
 \renewcommand{\bibfont}{\footnotesize}
-\addbibresource{references.bib}
+\addbibresource{../literature.bib}
 
 \setlength{\bibitemsep}{1ex}
 
