--- a/2017/05-22-leeds-computing.tex
+++ b/2017/05-22-leeds-computing.tex
@@ -56,7 +56,7 @@ London
 \setbeamertemplate{bibliography item}{}
 
 \renewcommand{\bibfont}{\footnotesize}
-\addbibresource{references.bib}
+\addbibresource{../literature.bib}
 
 \setlength{\bibitemsep}{1ex}
 \setlength{\fboxsep}{1pt}
