--- a/2017/10-24-dagstuhl.tex
+++ b/2017/10-24-dagstuhl.tex
@@ -35,7 +35,7 @@ London
 
 \setbeamertemplate{bibliography item}{}
 \renewcommand{\bibfont}{\fontsize{8}{8}\selectfont}
-\addbibresource{references.bib}
+\addbibresource{../literature.bib}
 \setlength{\bibitemsep}{1ex}
 \setlength{\fboxsep}{1pt}
 
