--- a/2018/01-25-Durham-computing.tex
+++ b/2018/01-25-Durham-computing.tex
@@ -67,7 +67,7 @@ London
 \setbeamertemplate{bibliography item}{}
 
 \renewcommand{\bibfont}{\fontsize{7}{7}\selectfont}
-\addbibresource{references.bib}
+\addbibresource{../literature.bib}
 
 \setlength{\bibitemsep}{1ex}
 \setlength{\fboxsep}{1pt}
