--- a/2018/09-18-monash-mathematics.tex
+++ b/2018/09-18-monash-mathematics.tex
@@ -131,7 +131,7 @@ backend=biber]{biblatex}
 \setbeamertemplate{bibliography item}{}
 
 \renewcommand{\bibfont}{\fontsize{7}{7}\selectfont}
-\addbibresource{references.bib}
+\addbibresource{../literature.bib}
 
 \setlength{\bibitemsep}{1ex}
 \setlength{\fboxsep}{1pt}
