--- a/2018/11-23-engineering-short.tex
+++ b/2018/11-23-engineering-short.tex
@@ -97,7 +97,7 @@ backend=biber]{biblatex}
 \setbeamertemplate{bibliography item}{}
 
 \renewcommand{\bibfont}{\fontsize{7}{7}\selectfont}
-\addbibresource{references.bib}
+\addbibresource{../literature.bib}
 
 \setlength{\bibitemsep}{1ex}
 \setlength{\fboxsep}{1pt}
