--- a/2019/06-10-imperial.tex
+++ b/2019/06-10-imperial.tex
@@ -34,7 +34,7 @@ giveninits=true,
 uniquename=false,
 backend=biber]{biblatex}
 \renewcommand{\bibfont}{\fontsize{7}{7}\selectfont}
-\addbibresource{references.bib}
+\addbibresource{../literature.bib}
 \setbeamertemplate{bibliography item}[triangle]
 \defbibenvironment{bibliography}
   {\list{}
