--- a/2019/07-01-preconditioning-minneapolis.tex
+++ b/2019/07-01-preconditioning-minneapolis.tex
@@ -31,7 +31,7 @@ giveninits=true,
 uniquename=init,
 backend=biber]{biblatex}
 \renewcommand{\bibfont}{\fontsize{7}{7}\selectfont}
-\addbibresource{references.bib}
+\addbibresource{../literature.bib}
 \setbeamertemplate{bibliography item}[triangle]
 \defbibenvironment{bibliography}
   {\list{}
