--- a/2020/01-06-Edinburgh.tex
+++ b/2020/01-06-Edinburgh.tex
@@ -74,7 +74,7 @@ giveninits=true,
 uniquename=init,
 backend=biber]{biblatex}
 \renewcommand{\bibfont}{\fontsize{7}{7}\selectfont}
-\addbibresource{references.bib}
+\addbibresource{../literature.bib}
 \setbeamertemplate{bibliography item}[triangle]
 \defbibenvironment{bibliography}
   {\list{}
