--- a/2020/02-12-FiredrakeUSA-pcpatch.tex
+++ b/2020/02-12-FiredrakeUSA-pcpatch.tex
@@ -36,7 +36,7 @@ uniquename=init,
 bibencoding=utf8,
 backend=biber]{biblatex}
 \renewcommand{\bibfont}{\fontsize{7}{7}\selectfont}
-\addbibresource{references.bib}
+\addbibresource{../literature.bib}
 \setbeamertemplate{bibliography item}[triangle]
 \defbibenvironment{bibliography}
   {\list{}
