--- a/2022/02-25-pp.tex
+++ b/2022/02-25-pp.tex
@@ -22,7 +22,7 @@ giveninits=true,
 uniquename=init,
 backend=biber]{biblatex}
 \renewcommand{\bibfont}{\fontsize{7}{7}\selectfont}
-\addbibresource{references.bib}
+\addbibresource{../literature.bib}
 
 \setlength{\bibitemsep}{1ex}
 \setlength{\fboxsep}{1pt}
